--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -29,10 +29,10 @@
                     <label for="password" class="font-medium text-warm-gray-900 login__left__form__group__label">Mot de
                         passe</label>
                     <div class="relative ">
-                        <input type="password" name="password" id="password" placeholder="Votre mot de passe"
+                        <input [type]="passwordType" name="password" id="password" placeholder="Votre mot de passe"
                             formControlName="password"
                             class="py-3 mt-2 px-4 w-full block shadow-sm text-warm-gray-900 focus:ring-blue-500	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
-                        <img class="absolute bottom-3 right-3 hover:cursor-pointer active:-translate-y-1 transition		"
+                        <img class="absolute bottom-3 right-3 hover:cursor-pointer active:-translate-y-1 transition		" (click)="passwordHide()"
                             src="../../../../../assets/images/eye.png" alt="">
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                     <span>Ou</span>
                 </div>
                 <div class="my-3">
-                    <button type="button"
+                    <button type="button" (click)="signinWithGoogle()"
                         class="w-full inline-flex justify-center items-center popping  py-4 border border-blue-300 shadow-sm text-base font-medium rounded-xl text-black bg-white focus:outline-none hover:bg-blue-300 hover:text-white active:-translate-y-1">
                         <!-- Heroicon name: solid/mail -->
                         <img src="../../../../../assets/images/google.svg" class="mr-3" height="20px" width="20px"
@@ -66,3 +66,41 @@
         </form>
     </div>
 </section>
+<div *ngIf="backgroundSwitch == 'in'" class="fixed z-50 inset-0 overflow-y-auto" aria-labelledby="modal-title"
+    role="dialog" aria-modal="true">
+    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div [@backgroundSwitch]="backgroundSwitch" class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
+            aria-hidden="true"></div>
+        <!-- This element is to trick the browser into centering the modal contents. -->
+        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+        <div [@openModal]="modalShow"
+            class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+            <div class="flex justify-center">
+                <div
+                    class="mx-auto flex-shrink-0 flex items-center justify-center h-20 w-20 rounded-full bg-red-100 sm:mx-0">
+                    <!-- Heroicon name: outline/exclamation -->
+                    <svg class="h-14 w-14 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                    </svg>
+                </div>
+
+            </div>
+            <div class="flex justify-center mt-5">
+                <div class=" text-center sm:mt-0 sm:ml-4 sm:text-left">
+                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                        {{content}}
+                    </h3>
+
+                </div>
+            </div>
+            <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+                <button type="button" (click)="continue()"
+                    class="w-full inline-flex justify-center rounded-md border border-transparent bg-blue-2 btnhover shadow-sm px-4 py-2 bg-blue-300 text-base font-medium text-white  focus:outline-none focus:ring-2 focus:ring-offset-2  sm:ml-3 sm:w-auto sm:text-sm">
+                    Continuer
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
