--- a/src/app/modules/dashboard/locataire/locataire.component.html
+++ b/src/app/modules/dashboard/locataire/locataire.component.html
@@ -1,4 +1,4 @@
-<navbar></navbar>
+<navbar [profileImage]="(loggedLocatiare$|async)?.profileImage!"></navbar>
 <div class="bg-blue1 w-full pb-10 pt-24">
 
   <router-outlet></router-outlet>
