--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -14,9 +14,11 @@
                             class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
                             id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                             <span class="sr-only">Open user menu</span>
-                            <img class="h-10 w-10	 rounded-full"
-                                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                                alt="">
+                            <img class="object-cover 	 shadow-lg rounded-2xl w-12 h-12" [defaultImage]="defaultImage"
+                                [lazyLoad]="profileImage" />
+                            <img class="object-cover 	 shadow-lg rounded-2xl w-12 h-12" [src]="profileImage"
+                                (load)="onImageLoad()">
+
                         </button>
                     </div>
                     <div class="origin-top-right hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
@@ -85,9 +87,9 @@
                                 class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
                                 id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                                 <span class="sr-only">Open user menu</span>
-                                <img class="h-10 w-10	 rounded-full"
-                                    src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                                    alt="">
+                                <img class="object-cover 	 shadow-lg rounded-2xl w-12 h-12"
+                                    [defaultImage]="defaultImage" [lazyLoad]="profileImage" />
+
                             </button>
                         </div>
                         <div class="ml-3 relative">
