--- a/src/app/modules/dashboard/bailleur/bailleur.component.html
+++ b/src/app/modules/dashboard/bailleur/bailleur.component.html
@@ -1,4 +1,5 @@
-<navbar></navbar>
+<navbar [profileImage]="loggedBailleur?.profileImage!"></navbar>
+
 <div class="bg-blue1 w-full pb-5 pt-24">
     <div class="max-w-7xl pt-5 md:pt-10 mx-auto px-2 sm:px-6 lg:px-8 grid grid-cols-12 gap-4">
         <div class="col-span-12 md:col-span-3 hidden md:block">
